# test-task-severstal

./: .dockerignore  .envrc  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
!env/: dev.env  prod.env
etc/: Dockerfile.migrations  mypy.ini  ruff.toml
etc/infra/: docker-compose.yaml
src/warehouse_app/: app.py  main.py
src/warehouse_app/api/: __init__.py  dependecies.py  rest.py  schemas.py
src/warehouse_app/core/: config.py  exc.py  handlers.py
src/warehouse_app/database/: __init__.py  connection.py  models.py  repository.py
src/warehouse_app/database/migrations/: env.py
src/warehouse_app/database/migrations/versions/: 2025_03_11_1805-6ed3011395a6_initial_table.py
src/warehouse_app/service/: roll.py
